.provarCaches/00D6C0000000xA6UAI/objects/Dataplier__Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Dataplier__AllowLookupFieldsUpdate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AllowLookupFieldsUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dataplier__ErrorsHandle__c</fullName>
        <label>ErrorsHandle</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__FilterMode__c</fullName>
        <label>FilterMode</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dataplier__isAnalyticsEnabled__c</fullName>
        <label>isAnalyticsEnabled</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__isMasking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMasking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dataplier__jobId__c</fullName>
        <label>jobId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Settings</label>
</CustomObject>